# retailgenius-churn-prediction

./: .gitignore  MLproject  Makefile  README.md  pyproject.toml  python_env.yaml  requirements.txt  setup.py
docs/: conf.py  index.rst
notebooks/: 01_churn_prediction_complete.ipynb
reports/: Part1_Functional_Methodologies_Report.docx  generate_part1_report.js
src/: __init__.py  config.py
src/data/: __init__.py  data_preparation.py
src/features/: __init__.py  feature_engineering.py
src/models/: __init__.py  inference.py  train.py
src/visualization/: __init__.py  plots.py  shap_analysis.py
